--- a/WebContent/old/index.html
+++ b/WebContent/old/index.html
@@ -1,26 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>施福基督教会 Suffolk Christian Church | 校园团契</title>
-	<style type="text/css">
-		nav ul {
-			list-style-type: none;
-		}
-		nav ul li {
-			display:inline;
-		}
-	</style>
+<meta charset="UTF-8">
+<meta name="description" content="description"/>
+<meta name="keywords" content="keywords"/> 
+<meta name="author" content="author"/> 
+<link rel="stylesheet" type="text/css" href="default.css" media="screen"/>
+<title>施福基督教会 Suffolk Christian Church | 校园团契 Campus Fellowship</title>
 </head>
 <body>
-	<nav>
+
+<div class="header">
+	<h1>施福基督教会 Suffolk Christian Church</h1>
+	<h2>校园团契 Campus Fellowship</h2>
+	<h3>2013年新生接机</h3>
+</div>
+
+<div class="navigation">
+	<a href="index.html">Home</a>
+	<a href="register.html">Register for Airport Pick-up 2013</a>
+	<a href="contact-us.html">Contact Us</a>
+	<div class="clearer"><span></span></div>
+</div>
+
+<div class="container">
+	<div class="content">
+
+		<h1>2013年新生接机</h1>
+		<p>新生接机简短介绍</p>
+		<p>可以加入引用段落</p>
+
+		<cite>耶稣说：『我就是道路、真理、生命，若不藉着我，没有人能到父那里去』— 约翰福音14：6</cite>
+		<p>可以有<a href="index.html">链接</a></p>
+
+		<div class="divider"></div>
+
+		<h1>施福基督教会介绍</h1>
+		<p>施福基督教会介绍，可以有list</p>
 		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="register.html">Register for Airport Pick-up</a></li>
-			<li><a href="listUser.jsp">Show all users</a></li>
+			<li>耶稣是光</li>
+			<li>耶稣是好牧人</li>
+			<li>耶稣是。。。</li>
 		</ul>
-	</nav>
-	<div>
-		<h2>Welcome to SCC Fellowship</h2>
+
+		<div class="divider"></div>
+
+		<h1>校园团契介绍</h1>
+		<p>校园团契介绍，code tag 效果如下：</p>
+		<code>margin-bottom: 12px;
+font: normal 1.1em "Lucida Sans Unicode",serif;
+background: url(img/quote.gif) no-repeat;
+padding-left: 28px;
+color: #555;</code>
 	</div>
+
+	<div class="footer">
+		&copy; 2013 <a href="index.html">Suffolk Christian Church Campus Fellowship</a>. All rights reserved.
+	</div>
+
+</div>
+
 </body>
 </html>
