Change some css and animation effect.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -88,7 +88,7 @@
         <div class="container">
           <div class="carousel-caption">
             <h1>2013年新生接机 </h1>
-            <p class="lead">施福基督教会组织接机。将会接8月10,11,17,18日下午5点前到JFK的新生。</p>
+            <p class="lead">施福基督教会组织接机。将会接8月10,11,16,17,18日下午5点前到JFK的新生。</p>
             <a class="btn btn-large btn-primary" href="register.html">新生接机报名</a>
           </div>
         </div>
@@ -109,20 +109,20 @@
     <!-- Three columns of text below the carousel -->
     <div class="row">
       <div class="span4">
-        <a href="https://docs.google.com/spreadsheet/viewform?formkey=dHJKeVhMS1RVM0ZsUFlsVWt5MVRXN1E6MQ" target="_blank"><img class="img-circle" src="img/church.png" width="140" height="140">
-        <h2>教会活动报名</h2></a>
+        <a href="https://docs.google.com/spreadsheet/viewform?formkey=dHJKeVhMS1RVM0ZsUFlsVWt5MVRXN1E6MQ" target="_blank"><img class="img-circle" src="img/church.png" width="140" height="140"></a>
+        <a href="https://docs.google.com/spreadsheet/viewform?formkey=dHJKeVhMS1RVM0ZsUFlsVWt5MVRXN1E6MQ" target="_blank"><h2>教会活动报名</h2></a>
         <p>施福基督教会每周五、周日活动报名。</p>
         <!-- <p><a class="btn" href="#">View details &raquo;</a></p> -->
       </div><!-- /.span4 -->
       <div class="span4">
-        <a href="https://www.facebook.com/groups/354472637897752/" target="_blank"><img class="img-circle" src="img/facebook.png" width="140" height="140">
-        <h2>Facebook Group</h2></a>
+        <a href="https://www.facebook.com/groups/354472637897752/" target="_blank"><img class="img-circle" src="img/facebook.png" width="140" height="140"></a>
+        <a href="https://www.facebook.com/groups/354472637897752/" target="_blank"><h2>Facebook Group</h2></a>
         <p>施福基督教会校园团契弟兄姐妹交流分享平台。</p>
         <!-- <p><a class="btn" href="https://www.facebook.com/groups/354472637897752/" target="_blank">View details &raquo;</a></p> -->
       </div><!-- /.span4 -->
       <div class="span4">
-        <a href="register.html"><img class="img-circle" src="img/stony-brook.png" width="140" height="140">
-        <h2>新生接机</h2></a>
+        <a href="register.html"><img class="img-circle" src="img/stony-brook.png" width="140" height="140"></a>
+        <a href="register.html"><h2>新生接机</h2></a>
         <p>2013年新生接机报名。</p>
         <!-- <p><a class="btn" href="#register">View details &raquo;</a></p> -->
       </div><!-- /.span4 -->
