--- a/WebContent/register.html
+++ b/WebContent/register.html
@@ -72,7 +72,7 @@
 <!-- Register
   ================================================== -->
   <div id="register" class="container register">
-    <div class="content">
+    <div class="content row">
       <div class="span10 offset1">
         <!-- <div> -->
         <!-- <img class="featurette-image pull-right" src="img/stonybrook.png"> -->
@@ -86,7 +86,6 @@
       </div>
       <form id="signUpForm" name="signUpForm" class="signUpForm form-horizontal" action="RegisterWS" method="post" autocomplete="off">
 
-        <div class="row">
           <div class="span6 form-basicInfo">
             <h2>基本信息</h2>
             <div id="lastNameRow" class="control-group">
@@ -150,12 +149,12 @@
               </div>
             </div>
           </div>
-        </div>
         <hr>
-        <div class="row form-stonyBrookInfo">
-          <div class="span12">
+        <div class="span12 form-stonyBrookInfo">
+          <!-- <div class="span12"> -->
             <h2>石溪信息</h2>
-          </div>
+          <!-- </div> -->
+          <div class="row">
           <div id="sbLeft" class="span6">
             <div id="destinationRow" class="control-group">
               <label class="control-label" for="form-destination">宿舍或校外住址* </label>
@@ -280,14 +279,15 @@
             </div>
           </div>
         </div>
-        <div class="row recaptcha">
+        </div>
+        <div class="recaptcha">
           <div class="span12">
             <hr class="captcha">
             <h2 class="captcha">验证信息</h2>
             <div id="captchadiv" style="width: 449px; margin-left: auto; margin-right: auto;"></div>
           </div>
         </div>
-        <div class="row buttons">
+        <div class="buttons">
           <div class="span12">
             <div class="control-group">
               <input id="btnReset" class="btn btn-large" type="reset" value="Reset"  onclick="formDestinationChange(this.value)">
