--- a/WebContent/about.html
+++ b/WebContent/about.html
@@ -94,6 +94,16 @@
 <!-- Le javascript
   ================================================== -->
   <!-- Placed at the end of the document so the pages load faster -->
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-42102113-1', 'sccfellowship.org');
+  ga('send', 'pageview');
+
+</script>
   <script src="js/jquery.min.js"></script>
   <script>
   $('a[href="#home"]').click(function(ev) {
