--- a/WebContent/register-form.html
+++ b/WebContent/register-form.html
@@ -62,7 +62,7 @@
               </div>
             </div>
             <div id="emailRow" class="control-group">
-              <label class="control-label" for="form-email">邮箱* </label>
+              <label class="control-label" for="form-email">联系邮箱* </label>
               <div class="controls">
                 <input type="email" name="email" id="form-email" placeholder="name@example.com" title="请输入常用邮箱。">
               </div>
@@ -275,7 +275,17 @@
 <!-- Le javascript
   ================================================== -->
   <!-- Placed at the end of the document so the pages load faster -->
-  <script src="js/jquery.min.js"></script>
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-42102113-1', 'sccfellowship.org');
+  ga('send', 'pageview');
+
+</script>
+<script src="js/jquery.min.js"></script>
   <script src="js/recaptcha_ajax.js"></script>
   <script src="js/jquery.validate.min.js"></script>
   <script src="js/jquery.maskedinput.min.js"></script>
