Add google spreadsheet sync.

--- a/WebContent/register-form.html
+++ b/WebContent/register-form.html
@@ -37,7 +37,7 @@
       <!-- <div> -->
         <!-- <img class="featurette-image pull-right" src="img/stonybrook.png"> -->
         <h2 class="featurette-heading">新生接机介绍</h2>
-        <p class="lead">　　施福基督教会每年都会参与迎接石溪大学新生的工作。从2010年学校取消校巴接机以后，我们开始承担联系巴士到肯尼迪国际机场(JFK)接新生的事工。因着　神的祝福与保守，过去三年我们的事工都能顺利完成。今年我们也会尽力让大家平安的到达学校。</p>
+        <p class="lead">　　施福基督教会每年都会参与迎接石溪大学新生的工作。从2010年学校取消校巴接机以后，我们开始承担联系巴士到肯尼迪国际机场(JFK)接新生的事工。因着　神的祝福与保守，过去三年我们的事工都能顺利完成。</p>
       </div>
       <div class="span12">
       <hr class="featurette-divider">
